--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, explicabo eaque exercitationem consequuntur facere autem quia officia expedita nobis sapiente aperiam vitae aspernatur voluptas necessitatibus sunt maxime porro! Repellat, atque!</p>
     </div>
+    <div>
+        <h3>My second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, explicabo eaque exercitationem consequuntur facere autem quia officia expedita nobis sapiente aperiam vitae aspernatur voluptas necessitatibus sunt maxime porro! Repellat, atque!</p>
+    </div>
+    <div>
+        <h3>My thirsd blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, explicabo eaque exercitationem consequuntur facere autem quia officia expedita nobis sapiente aperiam vitae aspernatur voluptas necessitatibus sunt maxime porro! Repellat, atque!</p>
+    </div>
 </body>
 </html>
