added the list and push code

--- a/index.html
+++ b/index.html
@@ -19,5 +19,16 @@
         <h3>My thirsd blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, explicabo eaque exercitationem consequuntur facere autem quia officia expedita nobis sapiente aperiam vitae aspernatur voluptas necessitatibus sunt maxime porro! Repellat, atque!</p>
     </div>
+
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>commit addded -m"added a meaningful message</li>
+            <li>git push</li>
+        </ul>
+
+
+    </div>
 </body>
 </html>
